--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Matrix Admin</title>
+    <title>Service on Demand Admin Panle</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/public/css/bootstrap.min.css" />
@@ -17,7 +17,7 @@
     <div id="loginbox">
         <form class="form-vertical" action="/" method="POST">
             <div class="control-group normal_text">
-                <h3><img src="/public/img/logo.png" alt="Logo" /></h3>
+                <h3>Service on Demand<br/>Admin Panel</h3>
             </div>
             <div class="control-group">
                 <div class="controls">
@@ -36,35 +36,12 @@
                 </div>
             </div>
             <div class="form-actions">
-                <span class="pull-left">
-                    <a href="#" class="flip-link btn btn-info" id="to-recover">Lost password?</a>
-                </span>
                 <span class="pull-right">
-                    <input type="submit" class="btn btn-success" value="LOGIN"/>
+                    <input type="submit" class="btn btn-success" value="LOGIN" />
                 </span>
-            </div>
-        </form>
-        <form id="recoverform" action="#" class="form-vertical">
-            <p class="normal_text">Enter your e-mail address below and we will send you instructions how to recover a
-                password.</p>
-
-            <div class="controls">
-                <div class="main_input_box">
-                    <span class="add-on bg_lo"><i class="icon-envelope"></i></span><input type="text"
-                        placeholder="E-mail address" />
-                </div>
-            </div>
-
-            <div class="form-actions">
-                <span class="pull-left"><a href="#" class="flip-link btn btn-success" id="to-login">&laquo; Back to
-                        login</a></span>
-                <span class="pull-right"><a class="btn btn-info" />Reecover</a></span>
             </div>
         </form>
     </div>
-
-    <script src="/public/js/jquery.min.js"></script>
-    <script src="/public/js/matrix.login.js"></script>
 </body>
 
 </html>
