--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -17,13 +17,13 @@
     <div id="loginbox">
         <form class="form-vertical" action="/" method="POST">
             <div class="control-group normal_text">
-                <h3>Service on Demand<br/>Admin Panel</h3>
+                <h3>Service on Demand<br />Admin Panel</h3>
             </div>
             <div class="control-group">
                 <div class="controls">
                     <div class="main_input_box">
                         <span class="add-on bg_lg"><i class="icon-user"> </i></span>
-                        <input type="text" placeholder="Username" />
+                        <input type="text" placeholder="Username" name="userEmail" required />
                     </div>
                 </div>
             </div>
@@ -31,10 +31,17 @@
                 <div class="controls">
                     <div class="main_input_box">
                         <span class="add-on bg_ly"><i class="icon-lock"></i></span>
-                        <input type="password" placeholder="Password" />
+                        <input type="password" placeholder="Password" required name="userPassword" />
                     </div>
                 </div>
             </div>
+            <% if (error != "" ){ %>
+            <div class="form-group form-success-gone">
+                <div class="alert alert-danger" role="alert">
+                    <%= error %>
+                </div>
+            </div>
+            <% } %>
             <div class="form-actions">
                 <span class="pull-right">
                     <input type="submit" class="btn btn-success" value="LOGIN" />
