Working on Login

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -23,7 +23,7 @@
                 <div class="controls">
                     <div class="main_input_box">
                         <span class="add-on bg_lg"><i class="icon-user"> </i></span>
-                        <input type="text" placeholder="Username" name="userEmail" required />
+                        <input type="text" placeholder="Enter Email" name="userEmail" required />
                     </div>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                 <div class="controls">
                     <div class="main_input_box">
                         <span class="add-on bg_ly"><i class="icon-lock"></i></span>
-                        <input type="password" placeholder="Password" required name="userPassword" />
+                        <input type="password" placeholder="Enter Password" required name="userPassword" />
                     </div>
                 </div>
             </div>
