Login error resolved

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -23,7 +23,7 @@
                 <div class="controls">
                     <div class="main_input_box">
                         <span class="add-on bg_lg"><i class="icon-user"> </i></span>
-                        <input type="text" placeholder="Enter Email" name="userEmail" required />
+                        <input type="email" placeholder="Enter Email" name="userEmail" required />
                     </div>
                 </div>
             </div>
