--- a/views/pages/admin/createVendor.ejs
+++ b/views/pages/admin/createVendor.ejs
@@ -1,1 +1,43 @@
 <% extend('../../admin_layout.ejs') %>
+<div id="content-header">
+    <div id="breadcrumb"> <a href="index.html" title="Go to Home" class="tip-bottom"><i class="icon-dashboard"></i>
+            Dashboard</a> <a href="#">Vendors</a> <a href="#" class="current">Create Vendor</a> </div>
+    <h1>Create New Vendor</h1>
+</div>
+<div class="container-fluid">
+    <hr>
+    <div class="row-fluid">
+        <div class="span12">
+            <div class="widget-box">
+                <div class="widget-title"> <span class="icon"> <i class="icon-info-sign"></i> </span>
+                    <h5>Create New Vendor</h5>
+                </div>
+                <div class="widget-content nopadding">
+                    <form class="form-horizontal" method="POST" action="/admin/createVendor">
+                        <div class="control-group">
+                            <label class="control-label">Your Name</label>
+                            <div class="controls">
+                                <input type="text" name="required" id="required">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label">Your Email</label>
+                            <div class="controls">
+                                <input type="text" name="email" id="email">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label">Date (only Number)</label>
+                            <div class="controls">
+                                <input type="text" name="date" id="date">
+                            </div>
+                        </div>
+                        <div class="form-actions">
+                            <input type="submit" value="SAVE VENDOR" class="btn btn-success">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
