Working on datatables

--- a/views/pages/admin/createVendor.ejs
+++ b/views/pages/admin/createVendor.ejs
@@ -1,6 +1,6 @@
 <% extend('../../admin_layout.ejs') %>
 <div id="content-header">
-    <div id="breadcrumb"> <a href="index.html" title="Go to Home" class="tip-bottom"><i class="icon-dashboard"></i>
+    <div id="breadcrumb"> <a href="/admin" title="Go to Home" class="tip-bottom"><i class="icon-dashboard"></i>
             Dashboard</a> <a href="#">Vendors</a> <a href="#" class="current">Create Vendor</a> </div>
     <h1>Create New Vendor</h1>
 </div>
