--- a/views/pages/admin/createVendor.ejs
+++ b/views/pages/admin/createVendor.ejs
@@ -37,7 +37,8 @@
                         <div class="control-group">
                             <label class="control-label">Phone Number</label>
                             <div class="controls">
-                                <input type="tel" name="phoneNumber" required>
+                                <input type="tel" name="phoneNumber" required minlength="13" maxlength="13" value="+923">
+                                <p>Please enter the phone number with the country code. (e.g: +923001234567)</p>
                             </div>
                         </div>
 
