Modified Create Vendor

--- a/views/pages/admin/createVendor.ejs
+++ b/views/pages/admin/createVendor.ejs
@@ -46,13 +46,18 @@
                             <label class="control-label">Category</label>
                             <div class="controls">
                                 <select name="category" required>
-                                    <option value="Electrician">Electrician</option>
-                                    <option value="Electrician">Plumber</option>
-                                    <option value="Electrician">AC</option>
-                                    <option value="Electrician">Electrician</option>
-                                    <option value="Electrician">Electrician</option>
-                                    <option value="Electrician">Electrician</option>
-                                    <option value="Electrician">Electrician</option>
+                                    <option value="electrician">Electrician</option>
+                                    <option value="plumber">Plumber</option>
+                                    <option value="ac">AC</option>
+                                    <option value="appliances">Appliances</option>
+                                    <option value="tv">TV</option>
+                                    <option value="refrigerator">Refrigerator</option>
+                                    <option value="carpenter">Carpenter</option>
+                                    <option value="computer">Computer</option>
+                                    <option value="painting">Painting</option>
+                                    <option value="pestControl">Pest Control</option>
+                                    <option value="carWash">Car Wash</option>
+                                    <option value="homeSecurity">Home Security</option>
                                 </select>
                             </div>
                         </div>
