--- a/views/pages/admin/allCategories.ejs
+++ b/views/pages/admin/allCategories.ejs
@@ -1,8 +1,8 @@
 <% extend('../../admin_layout.ejs') %>
 <div id="content-header">
     <div id="breadcrumb"> <a href="/admin" title="Go to Home" class="tip-bottom"><i class="icon-dashboard"></i>
-            Dashboard</a> <a href="#">Users</a> <a href="#" class="current">All Users</a> </div>
-    <h1>List All Users</h1>
+            Dashboard</a> <a href="#">Categories</a> <a href="#" class="current">All Categories</a> </div>
+    <h1>Listing All Categories</h1>
 </div>
 <div class="container-fluid">
     <hr>
@@ -12,7 +12,7 @@
                 <div class="widget-content nopadding">
                     <div class="widget-box">
                         <div class="widget-title"> <span class="icon"><i class="icon-th"></i></span>
-                            <h5>LISTING ALL USERS</h5>
+                            <h5>LISTING ALL CATEGORIES</h5>
                         </div>
                         <div class="widget-content nopadding">
                             <table class="table table-bordered data-table">
@@ -20,23 +20,23 @@
                                     <tr>
                                         <th>Image</th>
                                         <th>Name</th>
-                                        <th>Phone Number</th>
-                                        <th>Email</th>
                                         <th>Show Detail</th>
-
+                                        <th>Edit</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <% data.forEach(vendor => { %>
+                                    <% data.forEach(cat => { %>
                                     <tr>
-                                        <td>Image</td>
-                                        <td><%= vendor.val().firstName %> <%= vendor.val().lastName %></td>
-                                        <td><%= vendor.val().phone %> </td>
-                                        <td><%= vendor.val().email %></td>
+                                        <td>
+                                            <img src="<%= cat.val().url %>" style="border-radius: 50%; width: 90px;"
+                                                class="img-responsive img-thumbnail" />
+                                        </td>
+                                        <td><%= cat.val().name %></td>
                                         <td><a href="#" class="btn btn-block btn-primary">SHOW DETAIL</a></td>
-
+                                        <td><a href="#" class="btn btn-block btn-warning">EDIT DETAIL</a></td>
                                     </tr>
                                     <% }); %>
+
                                 </tbody>
                             </table>
                         </div>
