--- a/views/admin_layout.ejs
+++ b/views/admin_layout.ejs
@@ -27,7 +27,6 @@
   <script src="/public/js/jquery.ui.custom.js"></script>
   <script src="/public/js/bootstrap.min.js"></script>
   <script src="/public/js/jquery.dataTables.min.js"></script>
-  <script src="/public/js/matrix.tables.js"></script>
 </head>
 
 <body>
@@ -90,13 +89,13 @@
       <li class="<%= action === 'allUser' ? 'active' : ''%>">
         <a href="/admin/allUser">
           <i class="icon icon-group"></i>
-          <span>All users</span>
+          <span>All Users</span>
         </a>
       </li>
       <li class="<%= action === 'allBooking' ? 'active' : ''%>">
         <a href="/admin/allBooking">
           <i class="icon icon-bar-chart"></i>
-          <span>All Booking</span>
+          <span>All Bookings</span>
         </a>
       </li>
       <li class="<%= action === 'complains' ? 'active' : ''%>">
