--- a/views/pages/admin/createCategory.ejs
+++ b/views/pages/admin/createCategory.ejs
@@ -28,12 +28,12 @@
                             </div>
                             <label class="control-label">Select Icon</label>
                             <div class="controls">
-                                <input type="file" name="file" id="file" required accept="image/*">
+                                <input type="file" name="file" id="file" required accept="image/*" />
                             </div>
 
                             <label class="control-label">Category Name</label>
                             <div class="controls">
-                                <input type="text" name="name" required>
+                                <input type="text" name="name" required />
                             </div>
 
                             <div class="form-actions">
