--- a/views/pages/admin/editVendor.ejs
+++ b/views/pages/admin/editVendor.ejs
@@ -1,8 +1,8 @@
 <% extend('../../admin_layout.ejs') %>
 <div id="content-header">
     <div id="breadcrumb"> <a href="/admin" title="Go to Home" class="tip-bottom"><i class="icon-dashboard"></i>
-            Dashboard</a> <a href="#">Vendors</a> <a href="#" class="current">Create Vendor</a> </div>
-    <h1>Create New Vendor</h1>
+            Dashboard</a> <a href="#">Vendors</a> <a href="#" class="current">Edit Vendor</a> </div>
+    <h1>Edit Vendor Detail</h1>
 </div>
 <div class="container-fluid">
     <hr>
@@ -10,27 +10,30 @@
         <div class="span12">
             <div class="widget-box">
                 <div class="widget-title"> <span class="icon"> <i class="icon-info-sign"></i> </span>
-                    <h5>Create New Vendor</h5>
+                    <h5>Edit <%= vendor.firstName %>'s Detail</h5>
                 </div>
                 <div class="widget-content nopadding">
-                    <form class="form-horizontal" method="POST" action="/admin/createVendor">
+                    <form class="form-horizontal" method="POST" action="/admin/editVendor">
                         <div class="control-group">
+                            <input type="hidden" name="rating" required value="<%= vendor.rating %>" />
+
+
                             <label class="control-label">First Name</label>
                             <div class="controls">
-                                <input type="text" name="firstName" required />
+                                <input type="text" name="firstName" required value="<%= vendor.firstName %>" />
                             </div>
 
                             <div class="control-group">
                                 <label class="control-label">Last Name</label>
                                 <div class="controls">
-                                    <input type="text" name="lastName" required />
+                                    <input type="text" name="lastName" required value="<%= vendor.lastName %>" />
                                 </div>
                             </div>
 
                             <div class="control-group">
                                 <label class="control-label">Your Email</label>
                                 <div class="controls">
-                                    <input type="Email" name="email" required />
+                                    <input type="Email" name="email" required value="<%= vendor.email %>" />
                                 </div>
                             </div>
 
@@ -38,7 +41,7 @@
                                 <label class="control-label">Phone Number</label>
                                 <div class="controls">
                                     <input type="tel" name="phoneNumber" required minlength="13" maxlength="13"
-                                        value="+923" />
+                                        value="<%= vendor.phone %>" />
                                     <p>Please enter the phone number with the country code. (e.g: +923001234567)</p>
                                 </div>
                             </div>
@@ -48,7 +51,11 @@
                                 <div class="controls">
                                     <select name="category" required>
                                         <% data.forEach(d=>{%>
+                                        <% if (vendor.category === d.val().name ) { %>
+                                        <option selected value="<%= d.val().name %>"><%= d.val().name %></option>
+                                        <%} else {%>
                                         <option value="<%= d.val().name %>"><%= d.val().name %></option>
+                                        <%}%>
                                         <%});%>
                                     </select>
                                 </div>
@@ -57,11 +64,12 @@
                             <div class="control-group">
                                 <label class="control-label">Per hour Charge</label>
                                 <div class="controls">
-                                    <input type="Number" name="perHourCharge" required />
+                                    <input type="Number" name="perHourCharge" required
+                                        value="<%= vendor.perHourCharge %>" />
                                 </div>
                             </div>
                             <div class="form-actions">
-                                <input type="submit" value="SAVE VENDOR" class="btn btn-success">
+                                <input type="submit" value="UPDATE VENDOR" class="btn btn-success">
                             </div>
                     </form>
                 </div>
